
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int LOG_DEBUG ;
 char* SYSTEMD_BINARY_PATH ;
 int test_cleanup () ;
 int test_create_file_prepare (char const*) ;
 int test_loading () ;
 int test_misc (char const*) ;
 int test_setup_logging (int ) ;
 int test_testing () ;

int main(int argc, char **argv) {
        const char *path = SYSTEMD_BINARY_PATH;
        if (argc >= 2)
                path = argv[1];

        test_setup_logging(LOG_DEBUG);

        test_testing();
        test_loading();
        test_misc(path);
        test_create_file_prepare(path);
        test_cleanup();

        return 0;
}
