; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-selinux.c_main.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-selinux.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SYSTEMD_BINARY_PATH = common dso_local global i8* null, align 8
@LOG_DEBUG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = load i8*, i8** @SYSTEMD_BINARY_PATH, align 8
  store i8* %7, i8** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp sge i32 %8, 2
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load i8**, i8*** %5, align 8
  %12 = getelementptr inbounds i8*, i8** %11, i64 1
  %13 = load i8*, i8** %12, align 8
  store i8* %13, i8** %6, align 8
  br label %14

14:                                               ; preds = %10, %2
  %15 = load i32, i32* @LOG_DEBUG, align 4
  %16 = call i32 @test_setup_logging(i32 %15)
  %17 = call i32 (...) @test_testing()
  %18 = call i32 (...) @test_loading()
  %19 = load i8*, i8** %6, align 8
  %20 = call i32 @test_misc(i8* %19)
  %21 = load i8*, i8** %6, align 8
  %22 = call i32 @test_create_file_prepare(i8* %21)
  %23 = call i32 (...) @test_cleanup()
  ret i32 0
}

declare dso_local i32 @test_setup_logging(i32) #1

declare dso_local i32 @test_testing(...) #1

declare dso_local i32 @test_loading(...) #1

declare dso_local i32 @test_misc(i8*) #1

declare dso_local i32 @test_create_file_prepare(i8*) #1

declare dso_local i32 @test_cleanup(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
